--- a/dune
+++ b/dune
@@ -5,5 +5,5 @@
 
 (library
  (name fatamorgana)
- (modules actor counter impl_id impl_cps impl_queue)
+ (modules actor counter executor server)
  (wrapped false))
