--- a/examples/dune
+++ b/examples/dune
@@ -1,3 +1,3 @@
 (tests
  (libraries fatamorgana)
- (names counter implicit_queue registry server))
+ (names counter implicit_queue registry server yield))
