--- a/examples/dune
+++ b/examples/dune
@@ -1,3 +1,3 @@
 (tests
  (libraries fatamorgana unix)
- (names cast_self counter implicit_queue registry server yield))
+ (names cast_self counter implicit_queue registry server sleep yield))
